# Grok-Bot-1

./: .env.example  .gitignore  .gitmodules  AGENTS.md  BTC_Pulse_Analysis_and_Grok_Build_Brief.docx  CLAUDE.md  Dockerfile  GROK_BOT_OPERATOR_GUIDE.txt  README.md  docker-compose.yml
deploy/: local_push_env.ps1  vps_setup.sh
grok_bot/: __init__.py  config.py  daemon.py  dashboard.py  discovery_report.py  evidence.py  grok_maker.py  main.py  pipeline.py  reference_feeds.py  safety.py
hermes_integration/: README.md  cron_jobs.json
legacy-original/: .env.example  docker-compose.yml  pyproject.toml
legacy-original/grok_bot/: analyst.py  chainlink_reader.py  claude_verifier.py  config.py  factory.py  ingest.py  pipeline.py  price_stack.py  risk.py  window_engine.py
legacy-original/grok_bot/polymarket/: client.py
legacy-original/loop/: README.md  discovery_engine.py  driver.py  self_improve.py  skills.py  state.py  verifier.py
legacy-original/loop/connectors/: sqlite_store.py  tradingview.py
legacy-original/loop/skills/: risk.md
legacy-original/skills/grok-bot-profit-discovery/: SKILL.md
legacy-original/tests/: test_llm_roles.py  test_loop_integration.py  test_polymarket.py  test_runner.py
loop/: README.md  __init__.py  orchestrator.py  runner.py  state.py
monitoring/: README.md  TECHNICAL_GRADES.md  TECHNICAL_REPORT.md  grades-history.jsonl  latest-snapshot.json  technical-grades.json  timeline.jsonl
scripts/: apply-loop-arch-env.py  audit-vps-deep.py  bot-profile.json  deep-scan-vps.py  generate_arb_bible_analysis_docx.py  install_hermes_cron.sh  (+4 more)
(+104 files in other folders)
