[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-bot-1"
version = "0.1.0"
description = "Loop-engineered self-improving Polymarket trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
grok-bot = "grok_bot.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grok_bot*", "loop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]